DTSCCI-3888 Upgrade to springboot 4